--- a/style.css
+++ b/style.css
@@ -2,6 +2,11 @@
 
 :root{
     --primary-color: #047aed;
+    --secondary-color: #1c3fa8;
+    --light-color: #f4f4f4;
+    --dark-color: #002240;
+    --success-color: #5cb85c;
+    --error-color: #d9534f;
 }
 
 *{
@@ -38,6 +43,12 @@ p {
 
 img {
     max-width: 100%;
+}
+
+code, pre {
+    background: #333;
+    color: #fff;
+    padding: 10 px;
 }
 
 /* Navbar */
@@ -87,6 +98,10 @@ img {
     gap: 30px;
 }
 
+.showcase-text{
+    animation: slideInFromRight 1s ease-in;
+}
+
 .showcase-form {
     position: relative;
     top: 60px;
@@ -94,6 +109,7 @@ img {
     width: 400px;
     padding: 40px;
     z-index: 100;
+    animation: slideInFromLeft 1s ease-in;
 }
 
 .showcase-form .form-control {
@@ -131,6 +147,7 @@ img {
 /* stats */
 .stats{
     padding-top: 100px;
+    animation: slideInFromBottom 1s ease-in;
 }
 
 .stats-heading {
@@ -147,6 +164,13 @@ img {
     font-weight: bold;
 }
 
+.stats p {
+    background-color: #fff;
+    color: #333;
+    padding: 10px;
+    font-weight: bold;
+}
+
 /* Cli */
 .cli .grid {
     grid-template-columns: repeat(3, 1fr);
@@ -156,4 +180,211 @@ img {
 .cli .grid > *:first-child {
   grid-column: 1 / span 2;
   grid-row: 1 / span 2;
+}
+
+/* cloud */
+.cloud .grid{
+    grid-template-columns: 4fr 3fr;
+}
+
+/* languages */
+
+.languages .flex {
+    flex-wrap: wrap;
+}
+
+.languages .card {
+    text-align: center;
+    margin: 18px 10px 40px;
+}
+
+.languages .card h4 {
+    font-size: 20px;
+    margin-bottom: 10px;
+}
+
+.languages .card:hover {
+    transform: scale(1.05);
+    transition: transform 0.3s ease;
+}
+
+/*features */
+.features-head img,
+.docs-head img {
+    width: 200px;
+    justify-self: flex-end;
+}
+
+.features-sub-head img {
+    width: 300px;
+    justify-self: flex-end;
+}
+
+.features-main .card > i {
+    margin-right: 20px;
+}
+
+.features-main .grid *:first-child {
+    grid-column: 1 / span 3;
+}
+
+.features-main .grid *:nth-child(2) {
+    grid-column: 1 / span 2;
+}
+
+/* Docs */
+.docs-main h3 {
+    margin: 20px 0;
+}
+
+.docs-main .grid {
+    grid-template-columns: 1fr 2fr;
+    align-items: flex-start;
+}
+
+.docs-main nav li {
+    font-size: 17px;
+    padding-bottom: 5px;
+    margin-bottom: 5px;
+    border-bottom: 1px solid #ccc;
+}
+
+.docs-main .card a {
+    color: #ccc;
+}
+
+.docs-main a:hover {
+    color: var(--primary-color);
+    text-decoration: underline;
+}
+
+/* Footer */
+.footer .social a {
+    margin: 0 10px;
+    color: #fff;
+    font-size: 20px;
+}
+
+.footer .social {
+    margin-top: 20px;
+    padding: 20px;
+}
+
+/*Animations */
+@keyframes slideInFromLeft {
+    from {
+        transform: translateX(100%);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+@keyframes slideInFromRight {
+    from {
+        transform: translateX(-100%);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+@keyframes slideInFromTop {
+    from {
+        transform: translateY(-100%);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+@keyframes slideInFromBottom {
+    from {
+        transform: translateY(100%);
+        opacity: 0;
+    }
+    to {
+        transform: translateX(0);
+        opacity: 1;
+    }
+}
+
+/* tablets & under */
+@media (max-width: 768px) {
+    .grid,
+    .showcase .grid,
+    .stats .grid,
+    .cli .grid,
+    .cloud .grid,
+    .features-main .grid,
+    .docs-main .grid {
+        grid-template-columns: 1fr;
+        grid-template-rows: 1fr;
+    }   
+
+    .showcase {
+        height: auto;
+    }
+    .showcase-text {
+        text-align: center;
+        margin-top: 40px;
+        animation: slideInFromTop 1s ease-in;
+    }
+
+    .showcase-form {
+        justify-self: center;
+        margin: auto;
+        animation: slideInFromBottom 1s ease-in;
+    }
+
+    .cli .grid > *:first-child {
+        grid-column: 1;
+        grid-row: 1;
+    }
+
+    .features-head,
+    .features-sub-head,
+    .docs-head {
+        text-align: center;
+    }
+
+    .features-head img,
+    .features-sub-head img,
+    .docs-head img {
+        justify-self: center;
+    }
+
+    .features-main .grid *:first-child,
+    .features-main .grid *:nth-child(2) {
+        grid-column: 1;
+    }
+
+}
+
+/* mobile */
+@media (max-width: 500px) {
+    .navbar{
+        height: 110px;
+    }
+
+    .navbar .flex {
+        flex-direction: column;
+        align-items: center;
+    }
+
+    .navbar ul {
+        padding: 10px;
+        background-color: rgba(0, 0, 0, 0.1);
+    }
+    .footer {
+        text-align: center;
+    }
+
+    .footer .social a {
+        margin: 20px 0;
+    }
 }
